[package]
name = "stability-example"
version = "0.0.0"
description = "Example crate demonstrating stablity usage."
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
edition = "2021"
publish = false

[features]
unstable-risky-function = []
unstable-risky-struct = []

[dependencies.stability]
path = "../"
